--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,30 @@
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.4
-Flask==2.1.2
-Flask-Login==0.6.0
+asgiref==3.5.0
+click==7.1.2
+Django==4.0.4
+Flask==2.0.3
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 greenlet==1.1.2
-idna==3.3
-importlib-metadata==4.11.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-python-dotenv==0.20.0
-requests==2.27.1
-SQLAlchemy==1.4.36
-urllib3==1.26.9
-Werkzeug==2.1.2
-zipp==3.8.0
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+numpy==1.21.2
+Pillow==9.0.1
+pygame==2.1.2
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyqt5-tools==5.15.4.3.2
+pyqtgraph==0.12.2
+python-dotenv==0.19.1
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
+schedule==1.1.0
+SQLAlchemy==1.4.31
+sqlparse==0.4.2
+tzdata==2022.1
+ui==0.1.4
+Werkzeug==2.0.3
+WTForms==3.0.1
